hands-on-practice/09-k3s-local-cluster/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-course-k3s
  labels:
    app.kubernetes.io/part-of: docker-course
    kubernetes.io/metadata.name: docker-course-k3s
